Pin sphinx version to 8.0 Activate text wrapping in tables Prevent documentatin of numpy.ndarray methods

--- a/user_manual/source/_static/css/user_guide.css
+++ b/user_manual/source/_static/css/user_guide.css
@@ -10,3 +10,7 @@
 .highlight-output .highlight {
     background: #eeeeee;
 }
+
+.wy-table-responsive table td, .wy-table-responsive table th {
+    white-space: normal;
+}
